# XEngine

./: .gitignore  CMakeLists.txt  imgui.ini
assets/configs/: materials.json
assets/shaders/: shaders.json
assets/shaders/fragment/: basic.fs  depth.fs  lamp.fs  light.fs  refract.fs  skybox.fs
assets/shaders/fragment/effects/: blur.fs  edge_detection.fs  embos.fs  grayscale.fs  inverse.fs  sharpen.fs
assets/shaders/fragment/legacy/: alpha.fs  model.fs
assets/shaders/geometry/: boom.gs  normalDisplay.gs
assets/shaders/vertex/: basic.vs  boom.vs  normalDisplay.vs  skybox.vs
assets/shaders/vertex/legacy/: light.vs  model.vs
includes/: camera.hpp  shader.hpp
includes/UI/: EditorLayout.h
includes/application/: Application.h
includes/core/: Window.h  shader.hpp
includes/rendering/: Buffer.h  GPUMesh.h  Renderer.h  Skybox.h
includes/rendering/primitive/: PrimitiveGenerator.h  PrimitivesFactory.h
includes/scene/: Mesh.h  Model.h  SceneManager.h  mesh.hpp  model.hpp
includes/utils/: Logger.h
shaders/fragment/: light.fs
shaders/vertex/: lamp.vs  light.vs
src/: Engine.cpp  Engine.cppm  camera.cpp  main.cpp  shader.cpp
src/ECS/: Components.cppm  ECSWorld.cppm  Systems.cppm
src/UI/: EditorLayout.cpp  EditorLayout.cppm  Theme.cppm
src/application/: Application.cpp  Application.cppm
src/core/: CommandManager.cppm  ImGuiManager.cppm  Shader.cppm  Window.cpp  camera.cpp  shader.cpp
src/core/ECS/: Components.cppm  ECSWorld.cppm  Systems.cppm
src/core/logging/: ConsoleLogger.cppm  FileLogger.cppm  Logger.cppm
src/rendering/: Framebuffer.cpp  GPUMesh.cppm  GPUmesh.cpp  Light.cppm  Material.cppm  MaterialManager.cppm  Renderer.cpp  Renderer.cppm  Skybox.cppm
src/rendering/primitive/: PrimitiveGenerator.cpp  PrimitivesFactory.cpp  PrimitivesFactory.cppm
src/resource/material/: Material.cppm  MaterialManager.cppm
src/resource/model/: Model.cpp  Model.cppm
src/resource/shader/: Shader.cppm  ShaderCompiler.cppm  ShaderLoader.cppm  ShaderManager.cppm
src/scene/: Mesh.cppm  Model.cpp  Model.cppm  SceneManger.cpp  mesh.cpp  model.cpp
